BMSS-updated UI and script

--- a/views/cashreports/cashreportsscripts.ejs
+++ b/views/cashreports/cashreportsscripts.ejs
@@ -26,6 +26,8 @@
                             <button id="editBtn" class="btn btn-outline-inventory shadow-sm w-100" name="editBtn" data-toggle="modal" data-target="#accessModal">EDIT</button>
                             <button id="activeBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="activeBtn">ACTIVE</button>`;
                     }
+                    const statusBackground = getStatusBackground(item.status);
+                    const containerBackground = getStatusContainerBackground(item.status);
 
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.reportid, 'data-label': 'Report ID', class: 'custom-mobile-align' }),
@@ -34,7 +36,11 @@
                         $('<td>', { text: item.pos, 'data-label': 'POS', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.cashier, 'data-label': 'Cashier', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.type, 'data-label': 'Type', class: 'custom-mobile-align' }),
-                        $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                            $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                            $('<div>', { class: containerBackground }).append(
+                            $('<span>', { text: item.status, class: statusBackground })
+                            )
+                        ),
                         $('<td>', { html: action, 'data-label': 'Action' })
                     );
 
