--- a/views/dashboard/dashboard.ejs
+++ b/views/dashboard/dashboard.ejs
@@ -181,7 +181,7 @@
                                                             <span id="selectedcashier">Select cashier</span>
                                                             <i class="fa fa-chevron-left"></i>
                                                         </div>
-                                                        <input type="hidden" name="cashierid" id="cashierid">
+                                                        <input autocomplete="off" type="hidden" name="cashierid" id="cashierid">
                                                         <ul class="customdropdown-menu cashierlist">
                                                         </ul>
                                                     </div>
