--- a/views/discount/discount.ejs
+++ b/views/discount/discount.ejs
@@ -31,7 +31,7 @@
             <div class="row mb-2">
               <div class="col-md-12">
                 <label class="form-label" for="mu_password">Vendor ID</label>
-                <input
+                <input autocomplete="off"
                   id="discountidmodal"
                   name="discountidmodal"
                   type="text"
@@ -45,7 +45,7 @@
             <div class="row mb-2">
               <div class="col-md-6">
                 <label class="form-label" for="mu_password">Discount Name</label>
-                <input
+                <input autocomplete="off"
                   id="discountnamemodal"
                   name="discountnamemodal"
                   type="text"
@@ -59,7 +59,7 @@
                 <label class="form-label" for="mu_password"
                   >Description</label
                 >
-                <input
+                <input autocomplete="off"
                   id="descriptionmodal"
                   name="descriptionmodal"
                   type="text"
@@ -73,7 +73,7 @@
             <div class="row mb-2 justify-content-center">
               <div class="col-md-6">
                 <label class="form-label" for="mu_password">Rate</label>
-                <input
+                <input autocomplete="off"
                   id="ratemodal"
                   name="ratemodal"
                   type="number"
@@ -122,7 +122,7 @@
                       >Discount Name</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="discountname"
                     name="discountname"
                     type="text"
@@ -139,7 +139,7 @@
                       >Description</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="description"
                     name="description"
                     type="text"
@@ -154,7 +154,7 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon2">Rate</span>
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="rate"
                     name="rate"
                     type="number"
@@ -184,7 +184,7 @@
   </div>
 
   <!-- DataTales Example -->
-  <div class="card mb-4 table-size-lg">
+  <div class="card mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
       <div
         class="progress-bar"
@@ -216,9 +216,9 @@
             <div class="col-10">
               <div class="row justify-content-center">
                 <div class="input-group">
-                  <input
+                  <input autocomplete="off"
                     type="text"
-                    class="form-control bg-light border-0 small"
+                    class="form-control bg-light small"
                     placeholder="Search for..."
                     aria-label="Search"
                     aria-describedby="basic-addon2"
@@ -241,7 +241,7 @@
       </div>
     </div>
     <div class="card-body">
-      <div class="table-responsive scrollable-table-container-lg">
+      <div class="table-responsive scroll-cardbody-size-710">
         <table
           class="table table-bordered custom-mobile-table"
           id="discount-dataTable"
