--- a/views/employees/employees.ejs
+++ b/views/employees/employees.ejs
@@ -17,13 +17,13 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Employees ID</label>
-                                <input id="employeeidmodal" name="employeeidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="employeeidmodal" name="employeeidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Contact Info</label>
-                                <input id="contactinfomodal" name="contactinfomodal" type="text" class="form-control" placeholder="Enter New Contact info" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="contactinfomodal" name="contactinfomodal" type="text" class="form-control" placeholder="Enter New Contact info" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Full Name</label>
@@ -73,12 +73,12 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Employees ID</label>
-                                <input id="employeeidmodal2" name="employeeidmodal2" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="employeeidmodal2" name="employeeidmodal2" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <input id="confirm" name="confirm" type="text" class="form-control" placeholder="Type 'CONFIRM' to delete" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="confirm" name="confirm" type="text" class="form-control" placeholder="Type 'CONFIRM' to delete" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -108,7 +108,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Fullname</span>
                                     </div>
-                                    <input id="fullname" name="fullname" type="text" class="form-control" placeholder="Enter Fullname" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="fullname" name="fullname" type="text" class="form-control" placeholder="Enter Fullname" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -129,7 +129,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Contact</span>
                                     </div>
-                                    <input id="contactinfo" name="contactinfo" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="contactinfo" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="contactinfo" name="contactinfo" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="contactinfo" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -137,7 +137,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Date Hired:</span>
                                     </div>
-                                    <input type="date" class="form-control" id="datehired" name="datehired" max="">
+                                    <input autocomplete="off" type="date" class="form-control" id="datehired" name="datehired" max="">
                                 </div>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
