--- a/views/location/location.ejs
+++ b/views/location/location.ejs
@@ -17,13 +17,13 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Location ID</label>
-                                <input id="locationidmodal" name="locationidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="locationidmodal" name="locationidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Location Name</label>
-                                <input id="locationnamemodal" name="locationnamemodal" type="text" class="form-control" placeholder="Enter new category name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="locationnamemodal" name="locationnamemodal" type="text" class="form-control" placeholder="Enter new category name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Location Name</span>
                                 </div>
-                                <input id="locationname" name="locationname" type="text" class="form-control" placeholder="Enter Location Name" aria-label="categoryname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="locationname" name="locationname" type="text" class="form-control" placeholder="Enter Location Name" aria-label="categoryname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -81,7 +81,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
