--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -16,13 +16,13 @@
                                 <p>Please login to your account</p>
 
                                 <div class="form-outline mb-2">
-                                    <input type="username" id="username" name="username" class="form-control"
+                                    <input autocomplete="off" type="username" id="username" name="username" class="form-control"
                                         placeholder="Enter Your User Name" />
                                     <label class="form-label" for="username">Username</label>
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <input type="password" id="password" name="password" class="form-control"
+                                    <input autocomplete="off" type="password" id="password" name="password" class="form-control"
                                         placeholder="Enter Your Password" />
                                     <label class="form-label" for="password">Password</label>
                                 </div>
