--- a/views/promo/promo.ejs
+++ b/views/promo/promo.ejs
@@ -31,7 +31,7 @@
             <div class="row mb-2">
               <div class="col-md-12">
                 <label class="form-label" for="promoidmodal">Promo ID</label>
-                <input
+                <input autocomplete="off"
                   id="promoidmodal"
                   name="promoidmodal"
                   type="text"
@@ -45,7 +45,7 @@
             <div class="row mb-2">
               <div class="col-md-6">
                 <label class="form-label" for="promonamemodal">Promo Name</label>
-                <input
+                <input autocomplete="off"
                   id="promonamemodal"
                   name="promonamemodal"
                   type="text"
@@ -57,7 +57,7 @@
               </div>
               <div class="col-md-6">
                 <label class="form-label" for="mu_password">Description</label>
-                <input
+                <input autocomplete="off"
                   id="descriptionmodal"
                   name="descriptionmodal"
                   type="text"
@@ -71,7 +71,7 @@
             <div class="row mb-2 justify-content-center">
               <div class="col-md-6">
                 <label class="form-label" for="dtipermitmodal">DTI Permit</label>
-                <input
+                <input autocomplete="off"
                   id="dtipermitmodal"
                   name="dtipermitmodal"
                   type="number"
@@ -83,7 +83,7 @@
               </div>
               <div class="col-md-6">
                 <label class="form-label" for="coditionmodal">Condition</label>
-                <input
+                <input autocomplete="off"
                   id="coditionmodal"
                   name="coditionmodal"
                   type="number"
@@ -132,7 +132,7 @@
                       >Promo Name</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="promoname"
                     name="promoname"
                     type="text"
@@ -150,7 +150,7 @@
                       >Description</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="description"
                     name="description"
                     type="text"
@@ -168,7 +168,7 @@
                       >Condition</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="condition"
                     name="condition"
                     type="text"
@@ -187,7 +187,7 @@
                       >Start Date</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="startdate"
                     name="startdate"
                     type="date"
@@ -205,7 +205,7 @@
                       >End Date</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="enddate"
                     name="enddate"
                     type="date"
@@ -224,7 +224,7 @@
                       >DTI Permit</span
                     >
                   </div>
-                  <input
+                  <input autocomplete="off"
                     id="dtipermit"
                     name="dtipermit"
                     type="number"
@@ -254,7 +254,7 @@
   </div>
 
   <!-- DataTales Example -->
-  <div class="card mb-4 table-size-lg">
+  <div class="card mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
       <div
         class="progress-bar"
@@ -284,9 +284,9 @@
             <div class="col-10">
               <div class="row justify-content-center">
                 <div class="input-group">
-                  <input
+                  <input autocomplete="off"
                     type="text"
-                    class="form-control bg-light border-0 small"
+                    class="form-control bg-light small"
                     placeholder="Search for..."
                     aria-label="Search"
                     aria-describedby="basic-addon2"
@@ -309,7 +309,7 @@
       </div>
     </div>
     <div class="card-body">
-      <div class="table-responsive scrollable-table-container-lg">
+      <div class="table-responsive scroll-cardbody-size-710">
         <table
           class="table table-bordered custom-mobile-table"
           id="promo-dataTable"
