--- a/views/shiftreports/shiftreportsscripts.ejs
+++ b/views/shiftreports/shiftreportsscripts.ejs
@@ -204,6 +204,8 @@
                     if (item.status == "APPROVED") {
                         action = `<button id="printBtn" class="btn btn-sm btn-outline-inventory shadow-sm w-100" name="printBtn">PRINT</button>`;
                     }
+                    const statusBackground = getStatusBackground(item.status);
+                    const containerBackground = getStatusContainerBackground(item.status);
 
                     const tr = $("<tr>").append(
                         $("<td>", {
@@ -271,11 +273,11 @@
                             "data-label": "Receipt Ending",
                             class: "custom-mobile-align",
                         }),
-                        $("<td>", {
-                            text: item.status,
-                            "data-label": "Status",
-                            class: "custom-mobile-align",
-                        }),
+                        $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                            $('<div>', { class: containerBackground }).append(
+                            $('<span>', { text: item.status, class: statusBackground })
+                            )
+                        ),
                         $("<td>", { html: action, "data-label": "Action", class: "" })
                     );
 
