--- a/views/addon/addon.ejs
+++ b/views/addon/addon.ejs
@@ -20,7 +20,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Name</span>
                                     </div>
-                                    <input id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter Add on Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter Add on Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             
@@ -29,7 +29,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="pricemodal" name="pricemodal" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="pricemodal" name="pricemodal" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                         <div class="row justify-content-center mb-2">
                             <div class="col-md-6 mt-2">
                                 <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Add Ons Type" name="typemodal"
+                                    <input autocomplete="off" autocomplete="off" class="form-control text-center custom-input" placeholder="Select Add Ons Type" name="typemodal"
                                         id="typemodal" />
                                     <input autocomplete="off" typel="hidden" id="typemodalID" name="typemodalID" />
                                     <div class="input-group-append">
@@ -75,7 +75,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Name</span>
                                     </div>
-                                    <input id="name" name="name" type="text" class="form-control" placeholder="Enter Add on Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="name" name="name" type="text" class="form-control" placeholder="Enter Add on Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             
@@ -84,7 +84,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                         </div>
@@ -92,9 +92,9 @@
                         <div class="row justify-content-center mb-2">
                             <div class="col-md-6 mt-2">
                                 <div class="input-group">
-                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Add Ons Type" name="type"
+                                    <input autocomplete="off" autocomplete="off" class="form-control text-center custom-input" placeholder="Select Add Ons Type" name="type"
                                         id="type" />
-                                    <input autocomplete="off" type="hidden" id="typeID" name="typeID" />
+                                    <input autocomplete="off" autocomplete="off" type="hidden" id="typeID" name="typeID" />
                                     <div class="input-group-append">
                                         <span class="input-group-text">type</span>
                                     </div>
@@ -118,7 +118,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card  mb-4 table-size-lg">
+<div class="card  mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -140,7 +140,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -156,7 +156,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table custom-mobile-table" id="datatable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
