--- a/views/addontype/addontype.ejs
+++ b/views/addontype/addontype.ejs
@@ -17,7 +17,7 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="namemodal">Add On Type</label>
-                                <input id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -42,16 +42,16 @@
                 </div>
                 <div class="card-body extend">
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-8 mb-1">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Add On:</span>
                                 </div>
-                                <input id="name" name="name" type="text" class="form-control" placeholder="Enter Add On Name" aria-label="name" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="name" name="name" type="text" class="form-control" placeholder="Enter Add On Name" aria-label="name" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory w-50">
+                        <div class="col-md-4">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button> 
@@ -62,7 +62,7 @@
         </div>
     </div>
 
-    <div class="card  mb-4 table-size">
+    <div class="card  mb-4 cardbody-size-580">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small"
+                        <input autocomplete="off" type="text" class="form-control bg-light small"
                             placeholder="Search for..." aria-label="Search"
                             aria-describedby="basic-addon2" id="search-input">
                         <div class="input-group-append">
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-580">
                 <table class="table table-bordered custom-mobile-table" id="datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
