--- a/views/branch/branch.ejs
+++ b/views/branch/branch.ejs
@@ -17,25 +17,25 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Branch ID: </label>
-                                <input id="branchidmodal" name="branchidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="branchidmodal" name="branchidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Branch Name: </label>
-                                <input id="branchnamemodal" name="branchnamemodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="branchnamemodal" name="branchnamemodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">TIN: </label>
-                                <input id="tinmodal" name="tinmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="tinmodal" name="tinmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Address: </label>
-                                <input id="addressmodal" name="addressmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="addressmodal" name="addressmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -43,7 +43,7 @@
                                 <label class="form-label">Logo:</label>
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
-                                        <input
+                                        <input autocomplete="off"
                                             class="btn btn-outline-inventory shadow-sm w-100"
                                             type="file"
                                             id="imageinputmodal"
@@ -95,7 +95,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Branch ID</span>
                                     </div>
-                                    <input id="branchid" name="branchid" type="text" class="form-control" placeholder="Enter Branch ID" aria-label="branchid" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="branchid" name="branchid" type="text" class="form-control" placeholder="Enter Branch ID" aria-label="branchid" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -103,7 +103,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Branch Name</span>
                                     </div>
-                                    <input id="branchname" name="branchname" type="text" class="form-control" placeholder="Enter Banch Name" aria-label="branchname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="branchname" name="branchname" type="text" class="form-control" placeholder="Enter Banch Name" aria-label="branchname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">TIN</span>
                                     </div>
-                                    <input class="form-control" placeholder="Enter TIN" name="tin" id="tin"/>
+                                    <input autocomplete="off" class="form-control" placeholder="Enter TIN" name="tin" id="tin"/>
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -121,7 +121,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Address</span>
                                     </div>
-                                    <input id="address" name="address" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="address" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="address" name="address" type="text" class="form-control" placeholder="Enter Contact Info" aria-label="address" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -129,7 +129,7 @@
                             <div class="col-md-6">
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
-                                        <input
+                                        <input autocomplete="off"
                                             class="btn btn-outline-inventory shadow-sm w-100"
                                             type="file"
                                             id="imageInput"
@@ -167,7 +167,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card shadow mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -187,7 +187,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -203,7 +203,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="branch-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
