--- a/views/employees/employeesscripts.ejs
+++ b/views/employees/employeesscripts.ejs
@@ -142,8 +142,8 @@ $(document).ready(function () {
                         <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>
                         <span id="deleteBtn" class="editbutton" name="inactiveBtn"><i class="fas fa-trash" style="color: rgb(99, 115, 129);"></i></span>`;
                     }
-                    const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
-                    const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';
+                    const statusBackground = getStatusBackground(item.status);
+                    const containerBackground = getStatusContainerBackground(item.status);
 
                     const tr = $('<tr>').append(
                         $('<td>', { text: item.employeeid, 'data-label': 'Employee ID', class: 'custom-mobile-align' }),
