--- a/views/inventorycount/inventorycount.ejs
+++ b/views/inventorycount/inventorycount.ejs
@@ -87,7 +87,7 @@
                                         <div class="input-group-prepend">
                                             <span class="input-group-text" id="basic-addon2">Transfer Date</span>
                                         </div>
-                                        <input id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
+                                        <input autocomplete="off" id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
                                     </div>
                                 </div>
                             </div>
@@ -104,7 +104,7 @@
                                           <span>Select Product</span>
                                           <i class="fa fa-chevron-left"></i>
                                         </div>
-                                        <input type="hidden" name="gender">
+                                        <input autocomplete="off" type="hidden" name="gender">
                                         <ul class="customdropdown-menu">
                                           <li id="male">Male</li>
                                           <li id="female">Female</li>
@@ -112,7 +112,7 @@
                                     </div>
                                 </div>
                                 <div class="col-4">
-                                    <input id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="row justify-content-end mb-2">
@@ -168,7 +168,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -181,7 +181,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-table-container">
             <table class="table table-bordered custom-mobile-table" id="transferorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
