--- a/views/inventoryvaluationreport/inventoryvaluationreport.ejs
+++ b/views/inventoryvaluationreport/inventoryvaluationreport.ejs
@@ -76,16 +76,17 @@
                                         <div class="col-12">
                                             <div class="row justify-content-end">
                                                 <div class="col-md-3 mb-2">
-                                                    <div class="customdropdown">
-                                                        <div class="select selectproduct">
-                                                            <span id="selectedcategory">Select Category</span>
-                                                            <i class="fa fa-chevron-left"></i>
+                                                    <div class="input-group">
+                                                        <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Category" name="category"
+                                                            id="category" />
+                                                        <input autocomplete="off" type="hidden" id="categoryID" name="categoryID" />
+                                                        <div class="input-group-append">
+                                                            <span class="input-group-text">Category</span>
                                                         </div>
-                                                        <input type="hidden" name="categoryid" id="categoryid">
-                                                        <ul class="customdropdown-menu categorylist">
-                                                        </ul>
                                                     </div>
+                                                    <div class="custom-dropdown cdw-tableoption" id="categoryDropdown"></div>
                                                 </div>
+                                                
                                             </div>
                                             <div class="row mr-4 ml-4 mb-2">
                                                 <div class="table-responsive scrollable-table-container-xsm table-size-sm">
@@ -206,7 +207,7 @@
     </div>
 
     <!-- DataTales Example -->
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100"></div>
@@ -224,7 +225,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                        <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
                             aria-label="Search" aria-describedby="basic-addon2" id="search-input">
                         <div class="input-group-append">
                             <button class="btn sis-btn-color" type="button" id="search-button">
@@ -236,7 +237,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="valuation-datatable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
