--- a/views/materialcost/materialcost.ejs
+++ b/views/materialcost/materialcost.ejs
@@ -17,19 +17,19 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Material Cost ID</label>
-                                <input id="materialcostidmodal" name="materialcostidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="materialcostidmodal" name="materialcostidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Material Name</label>
-                                <input id="materialnamemodal" name="materialnamemodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" placeholder="Enter New Material Name">        
+                                <input autocomplete="off" id="materialnamemodal" name="materialnamemodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" placeholder="Enter New Material Name">        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Unit Cost</label>
-                                <input id="unitcostmodal" name="unitcostmodal" type="text" class="form-control" placeholder="Enter New unit cost" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="unitcostmodal" name="unitcostmodal" type="text" class="form-control" placeholder="Enter New unit cost" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -69,7 +69,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Material Name</span>
                                 </div>
-                                <input id="materialname" name="materialname" type="text" class="form-control" placeholder="Enter Material Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="materialname" name="materialname" type="text" class="form-control" placeholder="Enter Material Name" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                         <div class="col-md-6 mmb">
@@ -77,7 +77,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Unit Cost</span>
                                 </div>
-                                <input id="unitcost" name="unitcost" type="text" class="form-control" placeholder="Enter Material Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="unitcost" name="unitcost" type="text" class="form-control" placeholder="Enter Material Name" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size">
+<div class="card shadow mb-4 cardbody-size-710">
     <div class="card-header py-3 header-bg">
         <div class="row">
             <div class="col-md-6">
@@ -117,7 +117,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light border-0 small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="materialcost-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
