--- a/views/materialcount/materialcount.ejs
+++ b/views/materialcount/materialcount.ejs
@@ -105,7 +105,7 @@
     </div>
 
     <!-- DataTales Example -->
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -124,7 +124,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                        <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
                             aria-label="Search" aria-describedby="basic-addon2" id="search-input">
                         <div class="input-group-append">
                             <button class="btn sis-btn-color" type="button" id="search-button">
@@ -143,7 +143,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="materialcount-dataTable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
