--- a/views/payment/payment.ejs
+++ b/views/payment/payment.ejs
@@ -17,19 +17,19 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Payment Code</label>
-                                <input id="paymentcode" name="paymentcode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="paymentcode" name="paymentcode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Current Payment Name</label>
-                                <input id="currentpaymentName" name="currentpaymentName" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentpaymentName" name="currentpaymentName" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Payment Name</label>
-                                <input id="paymentnamemodal" name="paymentnamemodal" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="paymentnamemodal" name="paymentnamemodal" type="text" class="form-control" placeholder="Enter new payment name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -54,16 +54,16 @@
                 </div>
                 <div class="card-body extend">
                     <div class="row">
-                        <div class="col-md-8">
+                        <div class="col-md-8 mb-1">
                             <div class="input-group">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="basic-addon2">Payment:</span>
                                 </div>
-                                <input id="paymentname" name="paymentname" type="text" class="form-control" placeholder="Enter payment Name" aria-label="paymentname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="paymentname" name="paymentname" type="text" class="form-control" placeholder="Enter payment Name" aria-label="paymentname" aria-describedby="basic-addon1">
                             </div>
                         </div>
-                        <div class="col-md-4 align mt-1">
-                            <button id="addBtn" name="addBtn" class="btn btn-sm btn-outline-inventory w-50">
+                        <div class="col-md-4">
+                            <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-25">
                                 <i class="fa fa-plus" aria-hidden="true"></i>
                                 Add
                             </button> 
@@ -74,7 +74,7 @@
         </div>
     </div>
 
-<div class="card  mb-4 table-size">
+<div class="card shadow mb-4 cardbody-size-580">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -86,7 +86,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -99,7 +99,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-cardbody-size-580">
             <table class="table table-bordered custom-mobile-table" id="payment-table" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
