--- a/views/pos/pos.ejs
+++ b/views/pos/pos.ejs
@@ -17,27 +17,27 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">POS ID</label>
-                                <input id="posidmodal" name="posidmodal" type="text" class="form-control"aria-label="" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="posidmodal" name="posidmodal" type="text" class="form-control"aria-label="" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label">POS Name</label>
-                                <input id="posnamemodal" name="posnamemodal" type="text" class="form-control" placeholder="Enter New POS name" aria-label="" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="posnamemodal" name="posnamemodal" type="text" class="form-control" placeholder="Enter New POS name" aria-label="" aria-describedby="basic-addon1">        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">Serial</label>
-                                <input id="serialmodal" name="serialmodal" type="text" class="form-control" placeholder="Enter New Serial" aria-label="" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="serialmodal" name="serialmodal" type="text" class="form-control" placeholder="Enter New Serial" aria-label="" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label">MIN</label>
-                                <input id="minmodal" name="minmodal" type="text" class="form-control" placeholder="Enter New MIN" aria-label="" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="minmodal" name="minmodal" type="text" class="form-control" placeholder="Enter New MIN" aria-label="" aria-describedby="basic-addon1">        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">PTU</label>
-                                <input id="ptumodal" name="ptumodal" type="text" class="form-control" placeholder="Enter New PTU" aria-label="" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="ptumodal" name="ptumodal" type="text" class="form-control" placeholder="Enter New PTU" aria-label="" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">POS Name</span>
                                     </div>
-                                    <input id="posname" name="posname" type="text" class="form-control" placeholder="Enter POS Name" aria-label="posname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="posname" name="posname" type="text" class="form-control" placeholder="Enter POS Name" aria-label="posname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6 mmb">
@@ -76,7 +76,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text">Serial</span>
                                     </div>
-                                    <input class="form-control" placeholder="Enter Serial" name="serial" id="serial"/>
+                                    <input autocomplete="off" class="form-control" placeholder="Enter Serial" name="serial" id="serial"/>
                                 </div>
                             </div>
                         </div>
@@ -86,7 +86,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">MIN</span>
                                     </div>
-                                    <input id="min" name="min" type="text" class="form-control" placeholder="Enter MIN" aria-label="min" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="min" name="min" type="text" class="form-control" placeholder="Enter MIN" aria-label="min" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6 mmb">
@@ -94,7 +94,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">PTU</span>
                                     </div>
-                                    <input id="ptu" name="ptu" type="text" class="form-control" placeholder="Enter PTU" aria-label="ptu" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="ptu" name="ptu" type="text" class="form-control" placeholder="Enter PTU" aria-label="ptu" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
     </div>
     
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card shadow mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -133,7 +133,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -149,7 +149,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="pos-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
