--- a/views/position/position.ejs
+++ b/views/position/position.ejs
@@ -17,17 +17,17 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Position Code</label>
-                                <input autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" autocomplete="off" id="positioncode" name="positioncode" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label" for="mu_password">Current Position Name</label>
-                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="currentPositionName" name="currentPositionName" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label" for="mu_password">New Position Name</label>
-                                <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Position name" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="positionnamemodal" name="positionnamemodal" type="text" class="form-control" placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
