--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -74,7 +74,7 @@
 
     </div>
 
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -99,7 +99,7 @@
                                     <span id="selectedcategory">Filter by Category</span>
                                     <i class="fa fa-chevron-left"></i>
                                 </div>
-                                <input type="hidden" name="categoryid" id="categoryid">
+                                <input autocomplete="off" type="hidden" name="categoryid" id="categoryid">
                                 <ul class="customdropdown-menu categorylist">
                                 </ul>
                             </div>
@@ -111,7 +111,7 @@
                                         <span id="selectedbranch">Filter by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
-                                    <input type="hidden" name="branchid" id="branchid">
+                                    <input autocomplete="off" type="hidden" name="branchid" id="branchid">
                                     <ul class="customdropdown-menu branchlist">
                                     </ul>
                                 </div>
@@ -123,7 +123,7 @@
                                         <span id="selectedbranch">Filter by Branch</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
-                                    <input type="hidden" name="branchid" id="branchid">
+                                    <input autocomplete="off" type="hidden" name="branchid" id="branchid">
                                     <ul class="customdropdown-menu branchlist">
                                     </ul>
                                 </div>
@@ -131,7 +131,7 @@
                         <% } %>
                         <div class="col-5">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
                                     id="search-input">
                                 <div class="input-group-append">
@@ -153,7 +153,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="productinventory-datatable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
