--- a/views/productioncomponents/productioncomponents.ejs
+++ b/views/productioncomponents/productioncomponents.ejs
@@ -19,7 +19,7 @@
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <input id="componentidmodal" name="componentidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>    
+                                <input autocomplete="off" id="componentidmodal" name="componentidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>    
                             </div>
                             <div class="col-md-6">
                                 <button type="button" id="addRow" class="btn btn-outline-inventory">Add Material</button>
@@ -71,7 +71,7 @@
                                         <span id="selectedproduct">Select Product</span>
                                         <i class="fa fa-chevron-left"></i>
                                     </div>
-                                    <input type="hidden" name="productid" id="productid">
+                                    <input autocomplete="off" type="hidden" name="productid" id="productid">
                                     <ul class="customdropdown-menu productlist">
                                     </ul>
                                 </div>
@@ -127,7 +127,7 @@
     
 
     <!-- DataTales Example -->
-    <div class="card mb-4 table-size mt-2">
+    <div class="card mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -148,7 +148,7 @@
                         <div class="col-10">
                             <div class="row justify-content-center">
                                 <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small"
+                                    <input autocomplete="off" type="text" class="form-control bg-light small"
                                         placeholder="Search for..." aria-label="Search"
                                         aria-describedby="basic-addon2" id="search-input">
                                     <div class="input-group-append">
@@ -165,7 +165,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="productioncomponents-datatable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
