--- a/views/productionmaterials/productionmaterials.ejs
+++ b/views/productionmaterials/productionmaterials.ejs
@@ -17,17 +17,17 @@
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
                                 <label class="form-label">Product ID</label>
-                                <input id="productidmodal" name="productidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="productidmodal" name="productidmodal" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label">Product Name</label>
-                                <input id="productnamemodal" name="productnamemodal" type="text" class="form-control" placeholder="Enter New Product Name" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="productnamemodal" name="productnamemodal" type="text" class="form-control" placeholder="Enter New Product Name" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                             <div class="col-md-6">
                                 <label class="form-label">description</label>
-                                <input id="descriptionmodal" name="descriptionmodal" type="text" class="form-control" placeholder="Enter New Description" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" type="text" class="form-control" placeholder="Enter New Description" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
@@ -47,7 +47,7 @@
                         <div class="row mb-2">
                             <div class="col-md-6">
                                 <label class="form-label">Price</label>
-                                <input id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="pricemodal" name="pricemodal" type="text" class="form-control" placeholder="Enter New Price" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Product Name</span>
                                     </div>
-                                    <input id="productname" name="productname" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="productname" name="productname" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6 mmb">
@@ -85,31 +85,35 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Description</span>
                                     </div>
-                                    <input id="description" name="description" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Product Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
                         <div class="row mb-1">
                             <div class="col-md-6 mb-1">
                                 <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Category" name="category"
+                                        id="category" />
+                                    <input autocomplete="off" type="hidden" id="categoryID" name="categoryID" />
                                     <div class="input-group-append">
                                         <span class="input-group-text">Category</span>
                                     </div>
-                                    <select class="form-control text-center" name="category" id="category">
-                                        <option value="">-- Select Category --</option>
-                                    </select>  
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="categoryDropdown"></div>
                             </div>
+
                             <div class="col-md-6">
                                 <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Vendor" name="vendor"
+                                        id="vendor" />
+                                    <input autocomplete="off" type="hidden" id="vendorID" name="vendorID" />
                                     <div class="input-group-append">
-                                        <span class="input-group-text">Vendor ID</span>
+                                        <span class="input-group-text">Vendor</span>
                                     </div>
-                                    <select class="form-control text-center" name="vendorid" id="vendorid">
-                                        <option value="">-- Select Vendor ID --</option>
-                                    </select>  
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="vendorDropdown"></div>
                             </div>
+
                         </div>
                         <div class="row mb-1">
                             <div class="col-md-6 mb-1">
@@ -117,7 +121,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Units</span>
                                     </div>
-                                    <input id="units" name="units" type="text" class="form-control" placeholder="Enter Units" aria-label="units" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="units" name="units" type="text" class="form-control" placeholder="Enter Units" aria-label="units" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6 mb-1">
@@ -125,7 +129,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" type="number" class="form-control" placeholder="Enter Price" aria-label="price" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="price" name="price" type="number" class="form-control" placeholder="Enter Price" aria-label="price" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -146,7 +150,7 @@
     
 
     <!-- DataTales Example -->
-    <div class="card mb-4 table-size">
+    <div class="card mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -167,7 +171,7 @@
                         <div class="col-10">
                             <div class="row justify-content-center">
                                 <div class="input-group">
-                                    <input type="text" class="form-control bg-light border-0 small"
+                                    <input autocomplete="off" type="text" class="form-control bg-light small"
                                         placeholder="Search for..." aria-label="Search"
                                         aria-describedby="basic-addon2" id="search-input">
                                     <div class="input-group-append">
@@ -184,7 +188,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="employees-dataTable" width="100%" cellspacing="10">
                     <thead class="table-header">
                         <tr>
