--- a/views/productprice/productprice.ejs
+++ b/views/productprice/productprice.ejs
@@ -1,6 +1,6 @@
 
 <div class="container-fluid">
-    <div class="card shadow mb-4 table-size-lg">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%"
                 aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -15,7 +15,7 @@
                     <div class="row d-flex justify-content-end">
                         <div class="col-9">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -35,7 +35,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="productpricecb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="productpricecb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="productpricecb">Product Price</label>
@@ -45,7 +45,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="productcodecb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="productcodecb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="productcodecb">Product Code</label>
@@ -55,7 +55,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="descriptioncb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="descriptioncb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="descriptioncb">Description</label>
@@ -65,7 +65,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="barcodecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="barcodecb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="barcodecb">Barcode</label>
@@ -75,7 +75,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="imagecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="imagecb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="imagecb">Image</label>
@@ -85,7 +85,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="pricecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="pricecb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="pricecb">Price</label>
@@ -95,7 +95,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="categprycb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="categprycb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="categprycb">Category</label>
@@ -105,7 +105,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="previouspricecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="previouspricecb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="previouspricecb">Previous Price</label>
@@ -115,7 +115,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="pricechangecheckbox" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="pricechangecheckbox" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="pricechangecheckbox">Price Change</label>
@@ -125,7 +125,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="changedate" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="changedate" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="changedate">Change Date</label>
@@ -135,7 +135,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="createdbycb" class="custom-checkbox" >
+                                                    <input autocomplete="off" type="checkbox" id="createdbycb" class="custom-checkbox" >
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="createdbycb">Created By</label>
@@ -145,7 +145,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="createddatecb" class="custom-checkbox" >
+                                                    <input autocomplete="off" type="checkbox" id="createddatecb" class="custom-checkbox" >
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="createddatecb">Created Date</label>
@@ -155,7 +155,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="status" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="status" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="status">Status</label>
@@ -165,7 +165,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="actions" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="actions" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="actions">Action</label>
@@ -184,7 +184,7 @@
             </div>
         </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="productprice-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
