--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -17,13 +17,13 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Product ID: </label>
-                                <input id="productid" name="productid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="productid" name="productid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Product Description: </label>
-                                <input id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -31,7 +31,7 @@
                                 <label class="form-label">Product Image:</label>
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
-                                        <input
+                                        <input autocomplete="off"
                                             class="btn btn-outline-inventory -sm w-100"
                                             type="file"
                                             id="imageInputModal"
@@ -82,19 +82,19 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Description</span>
                                     </div>
-                                    <input id="description" name="description" type="text" class="form-control" placeholder="Enter Description" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="description" name="description" type="text" class="form-control" placeholder="Enter Description" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-6">
-                                <div class="customdropdown">
-                                    <div class="select selectcategory">
-                                        <span id="selectedcategory">Select Category</span>
-                                        <i class="fa fa-chevron-left"></i>
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Category" name="category"
+                                        id="category" />
+                                    <input autocomplete="off" type="hidden" id="categoryID" name="categoryID" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Select Category</span>
                                     </div>
-                                    <input type="hidden" name="categoryid" id="categoryid">
-                                    <ul class="customdropdown-menu categorylist">
-                                    </ul>
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="categoryDropdown"></div>
                             </div>
                         </div>
                         
@@ -104,7 +104,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -112,7 +112,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Product Barcode</span>
                                     </div>
-                                    <input id="barcode" name="barcode" type="text" class="form-control" placeholder="Enter Barcode" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="barcode" name="barcode" type="text" class="form-control" placeholder="Enter Barcode" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -121,7 +121,7 @@
                             <div class="col-md-6">
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
-                                        <input
+                                        <input autocomplete="off"
                                             class="btn btn-outline-inventory w-100"
                                             type="file"
                                             id="imageInput"
@@ -158,7 +158,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card  mb-4 table-size-lg">
+<div class="card  mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -180,7 +180,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -196,7 +196,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
