--- a/views/products/productsscripts.ejs
+++ b/views/products/productsscripts.ejs
@@ -162,10 +162,15 @@ $(document).ready(function () {
 
     //#endregion processing image
 
+    $(document).on("input", "#category", function () {
+        $("#categoryID").val("");
+    });
+
+
     $(document).on('click', '#addBtn', function () {
         let description = $('#description').val();
         let price = $('#price').val();
-        let category = $('#categoryid').val();
+        let category = $('#categoryID').val();
         let barcode = $('#barcode').val();
         let productimage = base64String
         var message = "";
@@ -257,8 +262,8 @@ $(document).ready(function () {
                             <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
                     }
                 }
-                const statusBackground = item.status === 'ACTIVE' ? 'status-success' : 'status-warning';
-                const containerBackground = item.status === 'ACTIVE' ? 'status-container-sc' : 'status-container-wr';   
+                const statusBackground = getStatusBackground(item.status);
+                const containerBackground = getStatusContainerBackground(item.status);  
 
                 const tr = $('<tr>').append(
                     $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
@@ -328,36 +333,32 @@ $(document).ready(function () {
     function LoadList() {
 
         $.ajax({
-            type: 'GET',
-            url: '/category/load',
+            type: "GET",
+            url: "/category/load",
             success: function (result) {
-                var data = result.data;
-                console.log(data)
-                $.each(data, (key, item) => {
-                        let categoryname = item.categoryname;
-                        let categoryid = item.categorycode;
-
-                        var listItem = $("<li></li>")
-                            .text(categoryname)
-                            .data("categoryid", categoryid);
-
-                        $(".categorylist").append(listItem);
-                    });
-
-                    $(".categorylist").on("click", "li", function () {
-                        var selectedOption = $(this).text();
-                        var selectedcategoryId = $(this).data("categoryid");
-
-                        $("#selectedcategory").text(selectedOption);
-                        $("#categoryid").val(selectedcategoryId).change();
-                    });
-
+                let activeData = [];
+                let dropdownID = "categoryDropdown";
+                let inputID = "category";
+                let hiddenID = "categoryID";
+                let container = result.data;
+                console.log(container)
+                $.each(container, (key, item) => {
+                    if (item.status === "ACTIVE") {
+                        let name = item.categoryname;
+                        let id = item.categorycode;
+                        activeData.push({
+                            display: name,
+                            value: id,
+                        });
+                    }
+                });
+                AddDropdownData(dropdownID, activeData, inputID, hiddenID)
             },
             error: function (err) {
-                errormsg(err);
-            }
+                warning('Warning', err);
+            },
         });
-
+        
         $.ajax({
             type: 'GET',
             url: '/branch/load',
