--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -55,7 +55,7 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text label-width-2">Vendor ID</span>
                             </div>
-                            <input class="form-control text-center custom-input" placeholder="Select/Input Vendor" name="vendorid" id="vendorid"/>
+                            <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select/Input Vendor" name="vendorid" id="vendorid"/>
                         </div>
                         <div class="custom-dropdown" id="vendoridDropdown">
                         </div>
@@ -68,7 +68,7 @@
                             </div>
                             <div class="col-4">
                                 <label for="itemquantities">Quantity</label>
-                                <input id="itemquantities" name="itemquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="itemquantities" name="itemquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
                             </div>
                         </div>
                         <div class="row justify-content-end mb-2">
@@ -83,25 +83,25 @@
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon2">Date Order</span>
                             </div>
-                            <input id="orderdate" name="orderdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
+                            <input autocomplete="off" id="orderdate" name="orderdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text">Date Needed</span>
                             </div>
-                            <input class="form-control" type="date" placeholder="Enter Serial" name="deliverydate" id="deliverydate"/>
+                            <input autocomplete="off" class="form-control" type="date" placeholder="Enter Serial" name="deliverydate" id="deliverydate"/>
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon2">Payment Term</span>
                             </div>
-                            <input id="paymentterms" name="paymentterms" type="text" class="form-control" placeholder="Enter Payment terms" aria-label="paymentterms" aria-describedby="basic-addon1">
+                            <input autocomplete="off" id="paymentterms" name="paymentterms" type="text" class="form-control" placeholder="Enter Payment terms" aria-label="paymentterms" aria-describedby="basic-addon1">
                         </div>
                         <div class="input-group mb-2">
                             <div class="input-group-prepend">
                                 <span class="input-group-text" id="basic-addon2">Payment Method</span>
                             </div>
-                            <input id="deliverymethod" name="deliverymethod" type="text" class="form-control" placeholder="Enter Delivery Method" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                            <input autocomplete="off" id="deliverymethod" name="deliverymethod" type="text" class="form-control" placeholder="Enter Delivery Method" aria-label="deliverymethod" aria-describedby="basic-addon1">
                         </div>
                     </div>
                     <div class="col-md-6">
@@ -142,7 +142,7 @@
         
 
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card shadow mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -160,7 +160,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -173,7 +173,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="purchaseorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
