--- a/views/purchaseorder/purchaseorderscripts.ejs
+++ b/views/purchaseorder/purchaseorderscripts.ejs
@@ -140,7 +140,9 @@
                         } else if(item.status === 'APPROVED'){
                             action = `<button id="printBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="printBtn">PRINT</button>`;
                         }
-    
+                        const statusBackground = getStatusBackground(item.status);
+                        const containerBackground = getStatusContainerBackground(item.status);
+                        
                         const tr = $('<tr>').append(
                             $('<td>', {
                                 text: item.orderid,
@@ -155,7 +157,11 @@
                             $('<td>', { text: item.amount, 'data-label': 'Total Amount', class: 'custom-mobile-align' }),
                             $('<td>', { text: item.paymentterms, 'data-label': 'Payment Term', class: 'custom-mobile-align' }),
                             $('<td>', { text: item.deliverymethod, 'data-label': 'Delivery Method', class: 'custom-mobile-align' }),
-                            $('<td>', { text: item.status, 'data-label': 'Status', class: 'custom-mobile-align' }),
+                                $('<td>', { class: 'custom-mobile-align', 'data-label': 'Status' }).append(
+                            $('<div>', { class: containerBackground }).append(
+                            $('<span>', { text: item.status, class: statusBackground })
+                            )
+                        ),
                             $('<td>', { html: action, 'data-label': 'Action', class: '' })
                         );
     
