--- a/views/salesdetails/salesdetails.ejs
+++ b/views/salesdetails/salesdetails.ejs
@@ -54,7 +54,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">Date:</span>
                                 </div>
-                                <input id="dateRange" name="dateRange" type="text" class="form-control" placeholder="Select Date Range" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="dateRange" name="dateRange" type="text" class="form-control" placeholder="Select Date Range" aria-describedby="basic-addon1">
                             </div>
                         </div>                        
                         <div class="col-md-6">
@@ -62,7 +62,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">POS:</span>
                                 </div>
-                                <input id="posid" name="posid" type="text" class="form-control" placeholder="Enter POS ID" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="posid" name="posid" type="text" class="form-control" placeholder="Enter POS ID" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
@@ -72,7 +72,7 @@
                                 <div class="input-group-prepend">
                                     <span class="input-group-text label-width" id="basic-addon2">Shift:</span>
                                 </div>
-                                <input id="shift" name="shift" type="text" class="form-control" placeholder="Enter Shift" aria-label="fullname" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="shift" name="shift" type="text" class="form-control" placeholder="Enter Shift" aria-label="fullname" aria-describedby="basic-addon1">
                             </div>
                         </div>
                     </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small" placeholder="Search for..."
+                        <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
                             aria-label="Search" aria-describedby="basic-addon2" id="search-input">
                         <div class="input-group-append">
                             <button class="btn sis-btn-color" type="button" id="search-button">
