--- a/views/salesinventoryhistory/salesinventoryhistory.ejs
+++ b/views/salesinventoryhistory/salesinventoryhistory.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="progress progress-sm mb-2">
             <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -14,7 +14,7 @@
                     <div class="row d-flex justify-content-end">
                         <div class="col-9">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
                                     id="search-input">
                                 <div class="input-group-append">
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scrollable-table-container">
+            <div class="table-responsive scroll-cardbody-size-710">
                 <table class="table table-bordered custom-mobile-table" id="salesinventoryhistory-datatable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
