--- a/views/service/service.ejs
+++ b/views/service/service.ejs
@@ -20,7 +20,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Service</span>
                                     </div>
-                                    <input id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter Service Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="namemodal" name="namemodal" type="text" class="form-control" placeholder="Enter Service Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             
@@ -29,7 +29,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="pricemodal" name="pricemodal" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="pricemodal" name="pricemodal" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                         </div>
@@ -61,7 +61,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Service</span>
                                     </div>
-                                    <input id="name" name="name" type="text" class="form-control" placeholder="Enter Service Name" aria-label="fullname" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="name" name="name" type="text" class="form-control" placeholder="Enter Service Name" aria-label="fullname" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             
@@ -70,7 +70,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Product Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card  mb-4 table-size-lg">
+<div class="card  mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -112,7 +112,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -128,7 +128,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table custom-mobile-table" id="datatable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
