--- a/views/servicepackage/servicepackage.ejs
+++ b/views/servicepackage/servicepackage.ejs
@@ -17,13 +17,13 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Product ID: </label>
-                                <input id="productid" name="productid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="productid" name="productid" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label">Product Description: </label>
-                                <input id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="descriptionmodal" name="descriptionmodal" placeholder="Enter new description" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row justify-content-center">
@@ -31,7 +31,7 @@
                                 <label class="form-label">Product Image:</label>
                                 <div class="input-group mb-3">
                                     <div class="custom-file">
-                                        <input
+                                        <input autocomplete="off"
                                             class="btn btn-outline-inventory -sm w-100"
                                             type="file"
                                             id="imageInputModal"
@@ -82,7 +82,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Name</span>
                                     </div>
-                                    <input id="name" name="name" value="" type="text" class="form-control" placeholder="Enter Package Name" aria-label="employeeid" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="name" name="name" value="" type="text" class="form-control" placeholder="Enter Package Name" aria-label="employeeid" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                             <div class="col-md-4 mmb">
@@ -90,7 +90,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Price</span>
                                     </div>
-                                    <input id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Package Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
+                                    <input autocomplete="off" id="price" name="price" value="" type="text" class="form-control" placeholder="Enter Package Price" aria-label="employeeid" aria-describedby="basic-addon1" oninput="formatPrice(event, this)">
                                 </div>
                             </div>
                         </div>
@@ -141,7 +141,7 @@
                                                         <td data-label="Branch ID" class="custom-mobile-align branch-id branchid"></td>
                                                         <td data-label="Quantity" class="custom-mobile-align">
                                                             <div class="row justify-content-center">
-                                                                <input id="quantity" name="quantity" type="number" class="form-control" placeholder="0.00" value="" maxlength="8">
+                                                                <input autocomplete="off" id="quantity" name="quantity" type="number" class="form-control" placeholder="0.00" value="" maxlength="8">
                                                             </div>                                                    
                                                         </td>
                                                         <td data-label="Action" class="custom-mobile-align" id="actionBtn"></td>
@@ -171,7 +171,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card  mb-4 table-size-lg">
+<div class="card  mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -193,7 +193,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -209,7 +209,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table custom-mobile-table" id="datatable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
