--- a/views/servicepackage/servicepackagescripts.ejs
+++ b/views/servicepackage/servicepackagescripts.ejs
@@ -491,12 +491,8 @@
                         <span class="editbutton" id="activeBtn"><i class="fas fa-eye" style="color: rgb(99, 115, 129);"></i></span>`;
           }
 
-          const statusBackground =
-            item.status === "ACTIVE" ? "status-success" : "status-warning";
-          const containerBackground =
-            item.status === "ACTIVE"
-              ? "status-container-sc"
-              : "status-container-wr";
+          const statusBackground = getStatusBackground(item.status);
+          const containerBackground = getStatusContainerBackground(item.status);
 
           const descriptionArray = JSON.parse(item.details);
 
