--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -14,7 +14,7 @@
                     <div class="row d-flex justify-content-end">
                         <div class="col-9">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
                                     id="search-input">
                                 <div class="input-group-append">
@@ -37,7 +37,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="datecb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="datecb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="datecb">Date</label>
@@ -47,7 +47,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="poscb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="poscb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="poscb">POS</label>
@@ -57,7 +57,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="shiftcb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="shiftcb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="shiftcb">Shift</label>
@@ -67,7 +67,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="cashiercb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="cashiercb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="cashiercb">Cashier</label>
@@ -77,7 +77,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="floatingcb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="floatingcb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="floatingcb">Floating</label>
@@ -87,7 +87,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="cashfloatcb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="cashfloatcb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="cashfloatcb">Cash Float</label>
@@ -97,7 +97,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="salesbeginningcb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="salesbeginningcb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="salesbeginningcb">Sales Beginning</label>
@@ -107,7 +107,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="salesendingcb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="salesendingcb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="salesendingcb">Sales Ending</label>
@@ -117,7 +117,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="totalsalescb" class="custom-checkbox" checked>
+                                                    <input autocomplete="off" type="checkbox" id="totalsalescb" class="custom-checkbox" checked>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="totalsalescb">Total Sales</label>
@@ -127,7 +127,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="approvedbycb" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="approvedbycb" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="approvedbycb">Approved By</label>
@@ -137,7 +137,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="approveddate" class="custom-checkbox">
+                                                    <input autocomplete="off" type="checkbox" id="approveddate" class="custom-checkbox">
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="approveddate">Approved Date</label>
@@ -147,7 +147,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="receiptbeginningcb" class="custom-checkbox" checked disabled>
+                                                    <input autocomplete="off" type="checkbox" id="receiptbeginningcb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="receiptbeginningcb">Receipt Beginning</label>
@@ -157,7 +157,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="receiptendingcb" class="custom-checkbox" checked disabled>
+                                                    <input autocomplete="off" type="checkbox" id="receiptendingcb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="receiptendingcb">Receipt Ending</label>
@@ -167,7 +167,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="statuscb" class="custom-checkbox" checked disabled>
+                                                    <input autocomplete="off" type="checkbox" id="statuscb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="statuscb">Status</label>
@@ -177,7 +177,7 @@
                                         <div class="dropdown-item custom-checkbox">
                                             <div class="row justify-content-center">
                                                 <div class="col-3">
-                                                    <input type="checkbox" id="actionscb" class="custom-checkbox" checked disabled>
+                                                    <input autocomplete="off" type="checkbox" id="actionscb" class="custom-checkbox" checked disabled>
                                                 </div>
                                                 <div class="col-9">
                                                     <label for="actionscb">Action</label>
