--- a/views/systemlogs/systemlogs.ejs
+++ b/views/systemlogs/systemlogs.ejs
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="card shadow mb-4 table-size">
+    <div class="card shadow mb-4 cardbody-size-710">
         <div class="card-header py-3 header-bg">
             <div class="row">
                 <div class="col-md-6">
@@ -7,7 +7,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="input-group">
-                        <input type="text" class="form-control bg-light border-0 small"
+                        <input autocomplete="off" type="text" class="form-control bg-light small"
                             placeholder="Search for..." aria-label="Search"
                             aria-describedby="basic-addon2" id="search-input">
                         <div class="input-group-append">
@@ -20,7 +20,7 @@
             </div>
         </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="systemlogs-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
