--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -81,7 +81,7 @@
                                     <div class="input-group-prepend">
                                         <span class="input-group-text" id="basic-addon2">Transfer Date</span>
                                     </div>
-                                    <input id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
+                                    <input autocomplete="off" id="transferdate" name="transferdate" type="date" class="form-control" placeholder="Enter POS Name" aria-label="orderdate" aria-describedby="basic-addon1">
                                 </div>
                             </div>
                         </div>
@@ -99,7 +99,7 @@
                             </div>
                             <div class="col-4">
                                 <label for="productquantities">Quantity</label>
-                                <input id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
+                                <input autocomplete="off" id="productquantities" name="productquantities" type="text" class="form-control quantity-input" placeholder="Enter Quantity" aria-label="deliverymethod" aria-describedby="basic-addon1">
                             </div>
                         </div>
                         <div class="row justify-content-end mb-2">
@@ -146,7 +146,7 @@
     </div>
             
 <!-- DataTales Example -->
-<div class="card shadow mb-4 table-size-lg">
+<div class="card shadow mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
@@ -164,7 +164,7 @@
             </div>
             <div class="col-md-6">
                 <div class="input-group">
-                    <input type="text" class="form-control bg-light border-0 small"
+                    <input autocomplete="off" type="text" class="form-control bg-light small"
                         placeholder="Search for..." aria-label="Search"
                         aria-describedby="basic-addon2" id="search-input">
                     <div class="input-group-append">
@@ -177,7 +177,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="transferorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
