--- a/views/users/users.ejs
+++ b/views/users/users.ejs
@@ -17,19 +17,19 @@
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">User Code</label>
-                                <input id="usercode" name="usercode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                                <input autocomplete="off" id="usercode" name="usercode" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">Current Password</label>
-                                <input id="currentpassword" name="currentpassword" type="password" class="form-control" placeholder="Enter curren passowrd" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="currentpassword" name="currentpassword" type="password" class="form-control" placeholder="Enter curren passowrd" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <div class="row mb-2">
                             <div class="col-md-12">
                                 <label class="form-label" for="mu_password">New Password</label>
-                                <input id="newpassword" name="newpassword" type="password" class="form-control" placeholder="Enter new password" aria-label="fullname" aria-describedby="basic-addon1">        
+                                <input autocomplete="off" id="newpassword" name="newpassword" type="password" class="form-control" placeholder="Enter new password" aria-label="fullname" aria-describedby="basic-addon1">        
                             </div>
                         </div>
                         <!-- <div class="row mb-2">
@@ -61,41 +61,43 @@
                     </div>
                     <div class="card-body extend">
                         <div class="row mb-2 justify-content-center">
-                            <div class="col-md-6 mmb">
-                                <div class="input-group"> 
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text label-width-2" id="basic-addon2">Employee ID</span>
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Employee" name="employee"
+                                        id="employee" />
+                                    <input autocomplete="off" type="hidden" id="employeeID" name="employeeID" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Employee</span>
                                     </div>
-                                    <select class="form-control text-center" name="employeelist" id="employeelist">
-                                        <option value="">-- Select here --</option>
-                                    </select>   
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="employeeDropdown"></div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="input-group">
-                                    <!-- <input class="form-control text-center custom-input" placeholder="Select/Input Access" name="accessname" id="accessname"/> -->
-                                    <div class="input-group-prepend">
-                                        <span class="input-group-text label-width-2">Access Type</span>
-                                    </div>
-                                    <select class="form-control text-center" name="accesslistmain" id="accesslistmain">
-                                        <option value="">Select Access</option>
-                                    </select>
-                                </div>
-                                <!-- <div class="custom-dropdown" id="accessDropdown">
-                                </div> -->
-                            </div>
-                            <div class="col-md-6 mmb">
-                                <div class="input-group">
-                                    <select class="form-control text-center" name="branchlist" id="branchlist">
-                                        <option value="">-- Select Branch --</option>
-                                    </select>    
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Access" name="access"
+                                        id="access" />
+                                    <input autocomplete="off" type="hidden" id="accessID" name="accessID" />
                                     <div class="input-group-append">
-                                        <span class="input-group-text label-width-2" id="basic-addon2">Branch ID</span>
+                                        <span class="input-group-text">Access Type</span>
                                     </div>
                                 </div>
+                                <div class="custom-dropdown cdw-tableoption" id="accessDropdown"></div>
                             </div>
+
+                            <div class="col-md-6">
+                                <div class="input-group">
+                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select Branch" name="branch"
+                                        id="branch" />
+                                    <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
+                                    <div class="input-group-append">
+                                        <span class="input-group-text">Branch Type</span>
+                                    </div>
+                                </div>
+                                <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
+                            </div>
+
                         </div>
                         <div class="row d-flex justify-content-end">
                             <div class="col-md-2 align mt-3">
@@ -112,7 +114,7 @@
     </div>
 
 <!-- DataTales Example -->
-<div class="card mb-4 table-size-lg">
+<div class="card mb-4 cardbody-size-710">
     <div class="progress progress-sm mb-2">
         <div class="progress-bar" role="progressbar" style="width: 0%"
             aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
@@ -132,7 +134,7 @@
                     <div class="col-10">
                         <div class="row justify-content-center">
                             <div class="input-group">
-                                <input type="text" class="form-control bg-light border-0 small"
+                                <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search"
                                     aria-describedby="basic-addon2" id="search-input">
                                 <div class="input-group-append">
@@ -148,7 +150,7 @@
         </div>
     </div>
     <div class="card-body">
-        <div class="table-responsive scrollable-table-container-lg">
+        <div class="table-responsive scroll-cardbody-size-710">
             <table class="table table-bordered custom-mobile-table" id="users-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
